// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalloutHeader /> with additional className matches its snapshot 1`] = `
<div
  className="y-callout--header TEST_CLASSNAME"
>
  <Block
    padding="xLarge"
  >
    header content
  </Block>
</div>
`;

exports[`<CalloutHeader /> with default options matches its snapshot 1`] = `
<div
  className="y-callout--header"
>
  <Block
    padding="xLarge"
  >
    header content
  </Block>
</div>
`;
